--- a/ecommerce-admin/tsconfig.json
+++ b/ecommerce-admin/tsconfig.json
@@ -27,7 +27,7 @@
     ".next/types/**/*.ts",
     "**/*.ts",
     "**/*.tsx"
-, "supa/page.js"  ],
+, "supa/page.js", "components/ui/alert.tsx"  ],
   "exclude": [
     "node_modules"
   ]
